# ciklum-agents-demo

./: .gitignore  README.md  pyproject.toml
app/: activities.py  agents.py  api.py  config.py  dto.py  models.py  sandbox.py  tracing.py  worker.py  workflows.py
sandbox/: build_rootfs.sh  guest_init.sh  guest_runner.py
scripts/: fetch_kernel.sh  run_dev.sh
