[project]
name = "agents-platform-demo"
version = "0.1.0"
description = "Durable multi-agent runs on Temporal with a Firecracker isolation"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.7",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
]

[tool.uv]
package = false
